<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adryan</string>
    <string name="txtLogo">ADRYAN\nMOVIL</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnLeer">Scanear</string>
    <string name="btnRead">Lectura</string>
    <string name="btnExit">Salir</string>
    <string name="btnCancel">Cancelar</string>
    <string name="btnAccept">Guardar</string>
    <string name="btnNew">Nuevo</string>
    <string name="btnEditar">Editar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnProcesarTxt">Procesar Archivo</string>
    <string name="btnTxtGenerate">Generar Archivo</string>
    <string name="btnConfiguration">Configuración</string>
    <string name="btnSynchronize">Sincronización</string>
    <string name="btnSynchronizeIn">Sincronización In</string>
    <string name="btnSynchronizeOut">Sincronización Out</string>
    <string name="btnTable">Cuadro Tareo</string>
    <string name="btnProcMarca">Procesar Marcas</string>
    <string name="txtSupervisor">Supervisor demo</string>
    <string name="action_settings">Settings</string>
    <string name="title_prompt_cc">Seleccionar Centro de Costo</string>
    <string name="title_prompt_act">Seleccionar Atividad</string>
    <string name="title_prompt_labor">Seleccionar Labor</string>
    <string name="title_prompt_cia">Seleccione Compañía</string>
    <string name="lblFotocheck">Fotocheck:</string>
    <string name="lblRegistration">Matrícula:</string>
    <string name="lblDWorkerData">Apellidos y Nombres:</string>
    <string name="lblDate">Fecha:</string>
    <string name="lblHora">Hora:</string>
    <string name="lblCostCenter">Centro de Costo:</string>
    <string name="lblSupervisor">Supervisor:</string>
    <string name="lblActivity">Actividad:</string>
    <string name="lblLabor">Labor:</string>
    <string name="lblTablet">Tablet:</string>
    <string name="lblPeriodo">Periodo Actual:</string>
    <string name="lblEstation">Estación:</string>
    <string name="lblServer">Ip Server API:</string>
    <string name="lblUrlSmtp">URL SMTP Server:</string>
    <string name="lblPortSmtp">Puerto SMTP:</string>
    <string name="lblPortSsl">Puerto SSL:</string>
    <string name="lblMailFrom">Correo de envío:</string>
    <string name="lblPwdMailFrom">Contraseña:</string>
    <string name="lblMailTo">Correo de destino:</string>
    <string name="lblSubjectMail">Asunto:</string>
    <string name="lblBodyMail">Texto a enviar:</string>
    <string name="hintUsuario">Usuario</string>
    <string name="hintPassword">Contraseña</string>
    <string name="hintServer">Servidor</string>
    <string name="title_activity_marcamanual">Marcación Manual</string>
    <string name="title_activity_configuracion">Configuración</string>
    <string name="title_activity_lectura">Lectura</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_activity_detalle_marcas">Detalle Marcaciones Manuales</string>
    <string name="title_activity_sincronizacion">Sincronización</string>
    <string name="title_activity_cuadro_tareo">CuadroTareo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lector_usb">LectorUsb</string>
    <string name="title_activity_usb_host_demo">UsbHostDemo</string>
    <string name="title_activity_parametro">Configuración de Parámetros</string>

</resources>
