<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.adryan.app.Sincronizacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginBottom="10dp">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView android:id="@+id/lblLog"
                style="@style/lblShow"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="text|textMultiLine"/>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button android:id="@+id/btnSynIn"
            style="@style/menuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/btnSynchronizeIn"/>

        <Button android:id="@+id/btnGenTXT"
            style="@style/menuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnTxtGenerate"/>

        <Button android:id="@+id/btnSyncWiFi"
            style="@style/menuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSynchronize"/>

        <Button android:id="@+id/btnCancelarSinc"
            style="@style/menuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel" />

    </LinearLayout>

</LinearLayout>
