<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/fondo"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.adryan.app.Configuracion">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/descriptedText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblTablet"/>

                    <TextView android:id="@+id/txtIdDispositivo"
                        style="@style/lblShow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/descriptedText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblDate"/>

                    <TextView android:id="@+id/txtCfgPeriodo"
                        style="@style/lblShow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout android:id="@+id/layoutHead"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/descriptedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblSupervisor"/>

                <TextView android:id="@+id/txtCfgMatSup"
                    style="@style/lblShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView android:id="@+id/txtCfgSupervisor"
                    style="@style/lblShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    style="@style/descriptedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblCostCenter"/>

                <Spinner
                    style="@style/cbMostrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerCC"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:spinnerMode="dialog"
                    android:prompt="@string/title_prompt_cc"
                    />

            </LinearLayout>

            <LinearLayout android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    style="@style/descriptedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblActivity"/>

                <Spinner
                    style="@style/cbMostrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerActividad"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:spinnerMode="dialog"
                    android:prompt="@string/title_prompt_act"/>

            </LinearLayout>

            <LinearLayout android:id="@+id/layout3"
                android:layout_below="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    style="@style/descriptedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblLabor"/>

                <Spinner
                    style="@style/cbMostrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerLabor"
                    android:layout_gravity="center_vertical"
                    android:spinnerMode="dialog"
                    android:prompt="@string/title_prompt_labor"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout android:id="@+id/layout4"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout android:id="@+id/layoutBtn1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button android:id="@+id/btnAceptarCfg"
                style="@style/menuButton"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/btnAccept"/>

            <Button android:id="@+id/btnCancelarCfg"
                style="@style/menuButton"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnCancel"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
