<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/fondo"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.adryan.app.Principal">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/descriptedText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblTablet"/>

                    <TextView android:id="@+id/txtIdDispositivo"
                        style="@style/lblShow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/descriptedText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblDate"/>

                    <TextView
                        style="@style/lblShow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:editable="true"
                        android:id="@+id/txtFecha"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    style="@style/descriptedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblSupervisor"/>

                <TextView android:id="@+id/txtMatSup"
                    style="@style/lblShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/lblShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="true"
                    android:id="@+id/txtSupervisor" />

            </LinearLayout>

            <LinearLayout android:id="@+id/layout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/descriptedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblCostCenter"/>

                <TextView
                    style="@style/lblShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtCC"/>

            </LinearLayout>

            <LinearLayout android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/descriptedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblActivity"/>

                <TextView
                    style="@style/lblShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:id="@+id/txtActividad"/>

            </LinearLayout>

            <LinearLayout android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/descriptedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblLabor"/>

                <TextView
                    style="@style/lblShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtLabor"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout android:id="@+id/layoutBtn1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button android:id="@+id/btnConfiguration"
                style="@style/menuButton"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnConfiguration"/>

            <Button android:id="@+id/btnLectura"
                style="@style/menuButton"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnRead"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layoutBtn2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button android:id="@+id/btnIngManual"
                style="@style/menuButton"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Ingreso Manual"/>

            <Button android:id="@+id/btnSincronizacion"
                style="@style/menuButton"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnSynchronize"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/layoutBtn3"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button android:id="@+id/btnCuadro"
                style="@style/menuButton"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnTable"/>

            <Button android:id="@+id/btnSalir"
                style="@style/menuButton"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnExit"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>